src/components/ui/Popover/index.scss
.popover-content {
  color: white;
  padding: 1em;
  border-radius: 4px;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 16px 24px;
  background: #2b323b;
  border-radius: 5px;
  max-width: 300px;
  .popover-title {
    display: flex;
    font-size: 18px;
    margin-bottom: 8px;
    align-items: center;
    svg {
      height: 20px;
      width: 20px;
      margin-right: 12px;
      path {
        stroke: #fff;
      }
    }
  }
  .popover-description {
    font-size: 12px;
  }
  .popover-footer {
    width: 100%;
    margin-top: 20px;
    display: flex;
    & > * {
      flex: 1;
    }
  }
}

.customSize {
  max-width: 620px;
  height: 110px;
  @media screen and (max-width: 480px) {
    height: unset;
    width: unset;
    max-width: unset;
  }
}

